--- a/taichihub/templates/index.html
+++ b/taichihub/templates/index.html
@@ -17,12 +17,10 @@
     <body class="mdui-theme-layout-auto mdui-theme-accent-pink mdui-theme-primary-indigo">
         <div class="mdui-toolbar mdui-color-theme">
             <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
-            <span class="mdui-typo-title">Taichi.js Playground</span>
+            <span class="mdui-typo-title">Taichi.js</span>
             <div class="mdui-toolbar-spacer"></div>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">more_vert</i></a>
-            <a href="https://github.com/taichi-dev/taichi.js" target="_blank" class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: 'Github'}">
+            <a href="/help" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons" mdui-tooltip="{content: 'Help'}">help_outline</i></a>
+            <a href="https://github.com/taichi-dev/taichi.js" target="_blank" class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: 'GitHub'}">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
         <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5
 	c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1
@@ -77,6 +75,20 @@ hub.bind_image(img)
                     <button class="mdui-btn mdui-btn-icon mdui-float-right" mdui-tooltip="{content: 'Reset'}" id="button-reset"><i class="mdui-icon material-icons">refresh</i></button>
                   </div>
                 </div>
+
+                <!--div class="mdui-col-xs-6 mdui-m-t-1 mdui-m-l-1 mdui-m-r-1">
+                    <div class="mdui-panel mdui-panel-popout" mdui-panel>
+                        <div class="mdui-panel-item">
+                            <div class="mdui-panel-item-header"><i class="mdui-icon material-icons">settings</i> &nbsp; Advanced settings...</div>
+                            <div class="mdui-panel-item-body">
+                                <div class="mdui-textfield mdui-textfield-floating-label">
+                                    <label class="mdui-textfield-label">Server address</label>
+                                    <input class="mdui-textfield-input" type="text" id="text-server-addr"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div-->
             </div>
 
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -91,10 +103,8 @@ hub.bind_image(img)
         $(function() {
             var canvas = document.getElementById('canvas');
             var ctx = canvas.getContext('2d');
-            ctx.fillStyle = 'indigo';
-            ctx.fillRect(0, 0, 512, 512);
 
-            var paused = false;
+            var paused = true;
             var frame = 0;
 
             function playProgram(program) {
@@ -165,6 +175,7 @@ hub.bind_image(img)
                     url: url,
                     datatype: 'script',
                     success: function(res) {
+                        $('#label-status').html('succeed');
                         console.log('Successfully loaded:', url);
                         var program = new Taichi(Module);
 
@@ -173,7 +184,8 @@ hub.bind_image(img)
                         });
                     },
                     error: function(xmlhr, err, exc) {
-                        alert('Error loading compiled script:', err, exc);
+                        $('#label-status').html('error');
+                        alert('Error loading compiled script!', err, exc);
                     },
                 });
             }
